services/sample-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-hello-service
spec:
  selector:
    app: node-hello
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 3000
